--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.29",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-calendar": "^2.19.2",
