--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.29",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-calendar": "^2.19.2",
@@ -12,6 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-slick": "^0.25.2",
+    "react-toastify": "^5.4.1",
+    "react-toasts": "^3.0.6",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
