--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@material-ui/lab": "^4.0.0-alpha.29",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-slick": "^0.25.2",
     "react-toastify": "^5.4.1",
     "react-toasts": "^3.0.6",
+    "redux": "^4.0.4",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
